recursion.cons.lessons.recursion.cons.Reverse.scala.error
reverse:6: error: value :: is not a member of Int
		return reverse(l.tail)::l.head;
                                      ^reverse:9: error: not found: value mem
	return fonctionInterne(l,mem);
                                 ^